Fixed navbar sign in button being cutoff

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,10 @@
 @import "bootstrap/theme";
 @import "bootstrap-table/bootstrap-table";
 
+.navbar-signin-btn {
+  padding-right: 25px;
+}
+
 .tooltip-inner {
   min-width: 300px; /* the minimum width */
 }
